--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -133,35 +133,36 @@ $lightBlue: #c9ebff;
         flex-direction: column;
         gap: 150px;
 
+        // RMV: not needed
         .post {
           display: flex;
           gap: 100px;
 
-          &:nth-child(2n + 1) {
-            flex-direction: row-reverse;
-          }
+          // &:nth-child(2n + 1) {
+          //   flex-direction: row-reverse;
+          // }
 
-          .img {
-            flex: 2;
-            position: relative;
+          // .img {
+          //   flex: 2;
+          //   position: relative;
 
-            &::after {
-              content: "";
-              width: 100%;
-              height: 100%;
-              background-color: $lightBlue;
-              position: absolute;
-              top: 20px;
-              left: -20px;
-              z-index: -1;
-            }
+          //   &::after {
+          //     content: "";
+          //     width: 100%;
+          //     height: 100%;
+          //     background-color: $lightBlue;
+          //     position: absolute;
+          //     top: 20px;
+          //     left: -20px;
+          //     z-index: -1;
+          //   }
 
-            img {
-              width: 100%;
-              max-height: 400px;
-              object-fit: cover;
-            }
-          }
+          //   img {
+          //     width: 100%;
+          //     max-height: 400px;
+          //     object-fit: cover;
+          //   }
+          // }
 
           .content {
             flex: 3;
@@ -177,21 +178,49 @@ $lightBlue: #c9ebff;
               font-size: 18px;
             }
 
-            button {
-              width: max-content;
-              padding: 10px 20px;
+            // button {
+            //   width: max-content;
+            //   padding: 10px 20px;
+            //   border: none;
+            //   cursor: pointer;
+            //   background-color: white;
+            //   border: 1px solid teal;
+            //   color: teal;
+
+            //   &:hover {
+            //     border: 1px solid white;
+            //     background-color: $lightBlue;
+            //     color: black;
+            //   }
+            // }
+            .quantity-counter {
+              display: flex;
+              align-items: center;
+            }
+            
+            .quantity-button {
+              padding: 5px 10px;
+              background-color: #007bff;
+              color: #fff;
               border: none;
               cursor: pointer;
-              background-color: white;
-              border: 1px solid teal;
-              color: teal;
-
-              &:hover {
-                border: 1px solid white;
-                background-color: $lightBlue;
-                color: black;
-              }
             }
+            
+            #quantity {
+              width: 40px;
+              text-align: center;
+              font-size: 16px;
+              border: 1px solid #ccc;
+              margin: 0 10px;
+            }
+            
+            #submit {
+              padding: 5px 10px;
+              background-color: #4caf50;
+              color: #fff;
+              border: none;
+              cursor: pointer;
+            }            
           }
         }
       }
@@ -199,104 +228,104 @@ $lightBlue: #c9ebff;
 
     //SINGLE
 
-    .single {
-      display: flex;
-      gap: 50px;
+    // .single {
+    //   display: flex;
+    //   gap: 50px;
 
-      .content {
-        flex: 5;
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
+    //   .content {
+    //     flex: 5;
+    //     display: flex;
+    //     flex-direction: column;
+    //     gap: 30px;
 
-        img {
-          width: 100%;
-          height: 300px;
-          object-fit: cover;
-        }
+    //     img {
+    //       width: 100%;
+    //       height: 300px;
+    //       object-fit: cover;
+    //     }
 
-        .user {
-          display: flex;
-          align-items: center;
-          gap: 10px;
-          font-size: 14px;
-          img {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            object-fit: cover;
-          }
+    //     .user {
+    //       display: flex;
+    //       align-items: center;
+    //       gap: 10px;
+    //       font-size: 14px;
+    //       img {
+    //         width: 50px;
+    //         height: 50px;
+    //         border-radius: 50%;
+    //         object-fit: cover;
+    //       }
 
-          span {
-            font-weight: bold;
-          }
-        }
+    //       span {
+    //         font-weight: bold;
+    //       }
+    //     }
 
-        .edit {
-          display: flex;
-          gap: 5px;
+    //     .edit {
+    //       display: flex;
+    //       gap: 5px;
 
-          img {
-            width: 20px;
-            height: 20px;
-            cursor: pointer;
-          }
-        }
+    //       img {
+    //         width: 20px;
+    //         height: 20px;
+    //         cursor: pointer;
+    //       }
+    //     }
 
-        h1 {
-          font-size: 42px;
-          color: #333;
-        }
+    //     h1 {
+    //       font-size: 42px;
+    //       color: #333;
+    //     }
 
-        p {
-          text-align: justify;
-          line-height: 30px;
-        }
-      }
-      .menu {
-        flex: 2;
-        display: flex;
-        flex-direction: column;
-        gap: 25px;
+    //     p {
+    //       text-align: justify;
+    //       line-height: 30px;
+    //     }
+    //   }
+    //   .menu {
+    //     flex: 2;
+    //     display: flex;
+    //     flex-direction: column;
+    //     gap: 25px;
 
-        h1 {
-          font-size: 20px;
-          color: #555;
-        }
+    //     h1 {
+    //       font-size: 20px;
+    //       color: #555;
+    //     }
 
-        .post {
-          display: flex;
-          flex-direction: column;
-          gap: 10px;
+    //     .post {
+    //       display: flex;
+    //       flex-direction: column;
+    //       gap: 10px;
 
-          img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-          }
+    //       img {
+    //         width: 100%;
+    //         height: 200px;
+    //         object-fit: cover;
+    //       }
 
-          h2 {
-            color: #555;
-          }
+    //       h2 {
+    //         color: #555;
+    //       }
 
-          button {
-            width: max-content;
-            padding: 7.5px 15px;
-            border: none;
-            cursor: pointer;
-            color: teal;
-            background-color: white;
-            border: 1px solid teal;
+    //       button {
+    //         width: max-content;
+    //         padding: 7.5px 15px;
+    //         border: none;
+    //         cursor: pointer;
+    //         color: teal;
+    //         background-color: white;
+    //         border: 1px solid teal;
 
-            &:hover {
-              border: 1px solid white;
-              background-color: $lightBlue;
-              color: black;
-            }
-          }
-        }
-      }
-    }
+    //         &:hover {
+    //           border: 1px solid white;
+    //           background-color: $lightBlue;
+    //           color: black;
+    //         }
+    //       }
+    //     }
+    //   }
+    // }
 
     //WRITE
 
