--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -246,7 +246,7 @@ $lightBlue: #c9ebff;
             }
             
             .quantity-button {
-              padding: 5px 10px;
+              padding: 3px 10px;
               background-color: #007bff;
               color: #fff;
               border: none;
@@ -258,7 +258,6 @@ $lightBlue: #c9ebff;
               text-align: center;
               font-size: 16px;
               border: 1px solid #ccc;
-              margin: 0 10px;
             }
             
             #submit {
@@ -267,6 +266,7 @@ $lightBlue: #c9ebff;
               color: #fff;
               border: none;
               cursor: pointer;
+              margin: 10px;
             }            
           }
         }
@@ -375,88 +375,34 @@ $lightBlue: #c9ebff;
     // }
 
     //WRITE
+    /* Style for the container */
+    .pet-type-dropdown {
+      margin: 20px;
+
+      label {
+        display: block;
+        margin-bottom: 5px;
+        font-weight: bold;
+      }
+
+      input, select, textarea {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 15px;
+        font-size: 16px;
+      }
+
+      p {
+        margin-top: 15px;
+        font-weight: bold;
+        color: #3498db;
+      }
+    }
 
     .add {
       margin-top: 20px;
       display: flex;
       gap: 20px;
-
-      .content {
-        flex: 5;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-
-        input {
-          padding: 10px;
-          border: 1px solid lightgray;
-        }
-
-        .editorContainer {
-          height: 300px;
-          overflow: scroll;
-          border: 1px solid lightgray;
-
-          .editor {
-            height: 100%;
-            border: none;
-          }
-        }
-      }
-
-      .menu {
-        flex: 2;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-
-        .item {
-          border: 1px solid lightgray;
-          padding: 10px;
-          flex:1;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          font-size: 12px;
-          color: #555;
-
-          h1{
-            font-size: 20px;
-          }
-
-          .file{
-            text-decoration: underline;
-            cursor: pointer;
-          }
-
-          .buttons{
-            display: flex;
-            justify-content: space-between;
-
-            :first-child{
-              cursor: pointer;
-              color: teal;
-              background-color: white;
-              border: 1px solid teal;
-              padding: 3px 5px;
-            }
-            :last-child{
-              cursor: pointer;
-              color: white;
-              background-color: teal;
-              border: 1px solid teal;
-              padding: 3px 5px;
-            }
-          }
-
-          .cat{
-            display: flex;
-            align-items: center;
-            gap: 2px;
-            color: teal;
-          }
-        }
-      }
     }
   }
 }
